--- a/styles/main.css
+++ b/styles/main.css
@@ -17,9 +17,10 @@ stage {
     box-sizing: border-box;
     display: block;
     padding-top: 1rem;
+    padding-bottom: 1rem;
     
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     background-color: papayawhip;
 }
 
@@ -66,10 +67,6 @@ starting-page > .sign-in > .footer {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-
-    height: 70vw;
-    width: 70vw;
-    /* border: 1px dotted black; */
 }
 
 .region {
@@ -79,7 +76,7 @@ starting-page > .sign-in > .footer {
     left: 0;
     right: 0;
 
-    /* background-color: blanchedalmond; */
+    background-color: lavender;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -130,4 +127,9 @@ result-page > .score {
         1px -1px 0 whitesmoke,
         -1px 1px 0 whitesmoke,
         1px 1px 0 whitesmoke;
+}
+
+region-label {
+    display: block;
+    cursor: pointer;
 }
