--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: papayawhip;
 }
 
 starting-page {
@@ -19,9 +20,8 @@ stage {
     padding-top: 1rem;
     padding-bottom: 1rem;
     
-    max-width: 100vw;
+    min-width: 98vw;
     min-height: 100vh;
-    background-color: papayawhip;
 }
 
 result-page {
@@ -37,9 +37,12 @@ result-page {
 }
 
 stage > .stage {
+    /* padding: 0 5%; */
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 starting-page > .sign-in {
@@ -50,11 +53,21 @@ starting-page > .sign-in {
 }
 
 starting-page > .sign-in > .header {
-    margin: 0.5rem 0 2.5rem 0;
+    margin: 0.5rem 0 0.5rem 0;
     font-size: 2rem;
+    line-height: 1.2em;
     text-align: center;
     color: rebeccapurple;
     font-weight: bold;
+}
+
+starting-page > .sign-in > .subtitle {
+    margin: 1rem 0 2.5rem 0;
+    font-size: 1.6rem;
+    line-height: 1em;
+    text-align: center;
+    color: rebeccapurple;
+    /* font-weight: bold; */
 }
 
 starting-page > .sign-in > .footer {
@@ -97,9 +110,9 @@ stage > .stage > .name-list {
     background-color: whitesmoke;
     border: .2rem solid skyblue;
     border-radius: 10px;
-    margin: 0 10px;
+    /* margin: 0 10px; */
     flex: 0 0 auto;
-    align-self: start;
+    /* align-self: start; */
     font-size: 1.4rem;
 }
 
@@ -108,17 +121,18 @@ stage > .info {
     font-size: 3rem;
     display: flex;
     justify-content: center;
+    height: 1em;
 }
 
 stage > .info > .timer {
-    margin: 0 1rem;
+    margin: 0 2rem;
     min-width: 5rem;
 }
 
 result-page > .score {
     -webkit-text-stroke: 1px whitesmoke;
-    font-size: 4rem;
-    color: lightcoral;
+    font-size: 6rem;
+    color: indianred;
     font-weight: bold;
     margin: 0 0 2rem 0;
     text-shadow:
@@ -132,4 +146,5 @@ result-page > .score {
 region-label {
     display: block;
     cursor: pointer;
+    margin: 0.4em 0;
 }
